crates/bevy_ecs/compile_fail/tests/ui/world_query_derive.stderr
error: invalid attribute, expected `mutable` or `derive`
  --> tests/ui/world_query_derive.rs:LL:CC
   |
LL | #[query_data(mut)]
   |              ^^^

error: `mutable` does not take any arguments
  --> tests/ui/world_query_derive.rs:LL:CC
   |
LL | #[query_data(mutable(foo))]
   |              ^^^^^^^

error: `derive` requires at least one argument
  --> tests/ui/world_query_derive.rs:LL:CC
   |
LL | #[query_data(derive)]
   |              ^^^^^^

error[E0277]: the trait bound `&'static mut Foo: ReadOnlyQueryData` is not satisfied
  --> tests/ui/world_query_derive.rs:LL:CC
   |
LL |     a: &'static mut Foo,
   |        ^^^^^^^^^^^^^^^^ the trait `ReadOnlyQueryData` is not implemented for `&'static mut Foo`
   |
   = help: the following other types implement trait `ReadOnlyQueryData`:
             &Archetype
             &T
             ()
             (F,)
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
           and 39 others
note: required by a bound in `_::assert_readonly`
  --> tests/ui/world_query_derive.rs:LL:CC
   |
LL | #[derive(QueryData)]
   |          ^^^^^^^^^ required by this bound in `assert_readonly`
   = note: this error originates in the derive macro `QueryData` (in Nightly builds, run with -Z macro-backtrace for more info)

error[E0277]: the trait bound `MutableMarked: ReadOnlyQueryData` is not satisfied
  --> tests/ui/world_query_derive.rs:LL:CC
   |
LL |     a: MutableMarked,
   |        ^^^^^^^^^^^^^ the trait `ReadOnlyQueryData` is not implemented for `MutableMarked`
   |
   = help: the following other types implement trait `ReadOnlyQueryData`:
             &Archetype
             &T
             ()
             (F,)
             (F0, F1)
             (F0, F1, F2)
             (F0, F1, F2, F3)
             (F0, F1, F2, F3, F4)
           and 39 others
note: required by a bound in `_::assert_readonly`
  --> tests/ui/world_query_derive.rs:LL:CC
   |
LL | #[derive(QueryData)]
   |          ^^^^^^^^^ required by this bound in `assert_readonly`
   = note: this error originates in the derive macro `QueryData` (in Nightly builds, run with -Z macro-backtrace for more info)

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0277`.
